styles/app.css, temp fix to stop scrollbars from always appearing

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,8 @@
 html, body {
   margin: 20px;
 }
+
+/* emberui was setting overflow: scroll, which caused scroll bars to permanently appear. TODO: probably want to remove this when emberui/etc. updates and I start doing more css work */
+.ember-application {
+  overflow: auto;
+}
